fix: spacing and title on mobile

--- a/style.css
+++ b/style.css
@@ -652,13 +652,21 @@ button:active,
 @media (max-width: 768px) {
 
   /* TABLE SECTION */
+
+  table {
+    margin-top: 15px;
+    margin-bottom: 30px;
+  }
   .table-section {
     margin: 40px 1rem;
     padding: 15px;
     padding-top: 15px;
   }
   .table-section h2 {
-    font-size: 20px;
+    font-size: 1.6rem; /* smaller, cleaner on mobile */
+    line-height: 1.3; /* Better spacing on small screens */
+    margin-bottom: 25px; /*creates breathing room*/
+    text-align: center; /* Centers title on mobile */
   }
 
   table {
